096_bst_set/grade.txt
Grading at 11/06/2018:05:35:15.010052
For commit ID 6fd039152b225d8a0c3e0082bd8386578edbaa94
-----------------------------------------------
testcase 1 : Testing with BstSet<int>
...compiling...
In file included from 90-tester.cpp:1:0:
bstset.h: In instantiation of ‘bool BstSet<T>::contains(const T&) const [with T = int]’:
90-tester.cpp:113:28:   required from here
bstset.h:131:26: error: ‘class BstSet<int>::Node’ has no member named ‘mapDat’
       if (key < (*curr)->mapDat.first) {
                 ~~~~~~~~~^~~~~~
bstset.h:134:31: error: ‘class BstSet<int>::Node’ has no member named ‘mapDat’
       else if (key > (*curr)->mapDat.first) {
                      ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘BstSet<T>::Node* BstSet<T>::construct_helper(BstSet<T>::Node*) [with T = int]’:
bstset.h:93:55:   required from ‘BstSet<T>::BstSet(const BstSet<T>&) [with T = int]’
90-tester.cpp:92:36:   required from here
bstset.h:40:37: error: ‘class BstSet<int>::Node’ has no member named ‘mapDat’
     Node * root = new Node(rootRhs->mapDat.first, rootRhs->mapDat.second, NULL);
                            ~~~~~~~~~^~~~~~
bstset.h:40:60: error: ‘class BstSet<int>::Node’ has no member named ‘mapDat’
     Node * root = new Node(rootRhs->mapDat.first, rootRhs->mapDat.second, NULL);
                                                   ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘void BstSet<T>::add(const T&) [with T = int]’:
90-tester.cpp:176:1:   required from here
bstset.h:117:28: error: ‘class BstSet<int>::Node’ has no member named ‘mapDat’
         if (key < (*curr)->mapDat.first) {
                   ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘BstSet<T>::Node* BstSet<T>::remove_helper(BstSet<T>::Node*, const T&) [with T = int]’:
bstset.h:144:25:   required from ‘void BstSet<T>::remove(const T&) [with T = int]’
90-tester.cpp:176:1:   required from here
bstset.h:68:15: error: ‘class BstSet<int>::Node’ has no member named ‘dat’; did you mean ‘data’?
         root->dat = curr->dat;
         ~~~~~~^~~
         data
bstset.h:68:27: error: ‘class BstSet<int>::Node’ has no member named ‘dat’; did you mean ‘data’?
         root->dat = curr->dat;
                     ~~~~~~^~~
                     data
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstSet<std::string>
...compiling...
In file included from 90-tester.cpp:1:0:
bstset.h: In instantiation of ‘bool BstSet<T>::contains(const T&) const [with T = std::__cxx11::basic_string<char>]’:
90-tester.cpp:113:28:   required from here
bstset.h:131:26: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘mapDat’
       if (key < (*curr)->mapDat.first) {
                 ~~~~~~~~~^~~~~~
bstset.h:134:31: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘mapDat’
       else if (key > (*curr)->mapDat.first) {
                      ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘BstSet<T>::Node* BstSet<T>::construct_helper(BstSet<T>::Node*) [with T = std::__cxx11::basic_string<char>]’:
bstset.h:93:55:   required from ‘BstSet<T>::BstSet(const BstSet<T>&) [with T = std::__cxx11::basic_string<char>]’
90-tester.cpp:92:36:   required from here
bstset.h:40:37: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘mapDat’
     Node * root = new Node(rootRhs->mapDat.first, rootRhs->mapDat.second, NULL);
                            ~~~~~~~~~^~~~~~
bstset.h:40:60: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘mapDat’
     Node * root = new Node(rootRhs->mapDat.first, rootRhs->mapDat.second, NULL);
                                                   ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘void BstSet<T>::add(const T&) [with T = std::__cxx11::basic_string<char>]’:
90-tester.cpp:176:1:   required from here
bstset.h:117:28: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘mapDat’
         if (key < (*curr)->mapDat.first) {
                   ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘BstSet<T>::Node* BstSet<T>::remove_helper(BstSet<T>::Node*, const T&) [with T = std::__cxx11::basic_string<char>]’:
bstset.h:144:25:   required from ‘void BstSet<T>::remove(const T&) [with T = std::__cxx11::basic_string<char>]’
90-tester.cpp:176:1:   required from here
bstset.h:68:15: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘dat’; did you mean ‘data’?
         root->dat = curr->dat;
         ~~~~~~^~~
         data
bstset.h:68:27: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘dat’; did you mean ‘data’?
         root->dat = curr->dat;
                     ~~~~~~^~~
                     data
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstSet<(a custom class we wrote)>
...compiling...
In file included from 90-tester.cpp:1:0:
bstset.h: In instantiation of ‘bool BstSet<T>::contains(const T&) const [with T = Tester]’:
90-tester.cpp:113:28:   required from here
bstset.h:131:26: error: ‘class BstSet<Tester>::Node’ has no member named ‘mapDat’
       if (key < (*curr)->mapDat.first) {
                 ~~~~~~~~~^~~~~~
bstset.h:134:31: error: ‘class BstSet<Tester>::Node’ has no member named ‘mapDat’
       else if (key > (*curr)->mapDat.first) {
                      ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘BstSet<T>::Node* BstSet<T>::construct_helper(BstSet<T>::Node*) [with T = Tester]’:
bstset.h:93:55:   required from ‘BstSet<T>::BstSet(const BstSet<T>&) [with T = Tester]’
90-tester.cpp:92:36:   required from here
bstset.h:40:37: error: ‘class BstSet<Tester>::Node’ has no member named ‘mapDat’
     Node * root = new Node(rootRhs->mapDat.first, rootRhs->mapDat.second, NULL);
                            ~~~~~~~~~^~~~~~
bstset.h:40:60: error: ‘class BstSet<Tester>::Node’ has no member named ‘mapDat’
     Node * root = new Node(rootRhs->mapDat.first, rootRhs->mapDat.second, NULL);
                                                   ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘void BstSet<T>::add(const T&) [with T = Tester]’:
90-tester.cpp:176:1:   required from here
bstset.h:117:28: error: ‘class BstSet<Tester>::Node’ has no member named ‘mapDat’
         if (key < (*curr)->mapDat.first) {
                   ~~~~~~~~~^~~~~~
bstset.h: In instantiation of ‘BstSet<T>::Node* BstSet<T>::remove_helper(BstSet<T>::Node*, const T&) [with T = Tester]’:
bstset.h:144:25:   required from ‘void BstSet<T>::remove(const T&) [with T = Tester]’
90-tester.cpp:176:1:   required from here
bstset.h:68:15: error: ‘class BstSet<Tester>::Node’ has no member named ‘dat’; did you mean ‘data’?
         root->dat = curr->dat;
         ~~~~~~^~~
         data
bstset.h:68:27: error: ‘class BstSet<Tester>::Node’ has no member named ‘dat’; did you mean ‘data’?
         root->dat = curr->dat;
                     ~~~~~~^~~
                     data
The code did not compile.  This test failed.

Overall Grade: F
